Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9918

HdfsOrcScanner crash on resolving columns

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.0
    • Backend
    • BUILD_TAG jenkins-impala-cdpd-master-core-ubsan-111
    • ghx-label-8

    Description

      Core file generated in impala-cdpd-master-core-ubsan build

      Back traces:

      CORE: ./tests/core.1594000709.13971.impalad
      BINARY: ./be/build/latest/service/impalad

      Core was generated by `/data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/build/lat'.
      Program terminated with signal SIGABRT, Aborted.
      #0 0x00007f7a481851f7 in raise () from /lib64/libc.so.6
      To enable execution of this file add
      add-auto-load-safe-path /data0/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/gcc-4.9.2/lib64/libstdc++.so.6.0.20-gdb.py
      line to your configuration file "/var/lib/jenkins/.gdbinit".
      To completely disable this security protection add
      set auto-load safe-path /
      line to your configuration file "/var/lib/jenkins/.gdbinit".
      For more information about this security protection see the
      "Auto-loading safe path" section in the GDB manual. E.g., run from the shell:
      info "(gdb)Auto-loading safe path"
      #0 0x00007f7a481851f7 in raise () from /lib64/libc.so.6
      #1 0x00007f7a481868e8 in abort () from /lib64/libc.so.6
      #2 0x00000000083401c4 in google::DumpStackTraceAndExit() ()
      #3 0x0000000008336b5d in google::LogMessage::Fail() ()
      #4 0x0000000008338402 in google::LogMessage::SendToLog() ()
      #5 0x0000000008336537 in google::LogMessage::Flush() ()
      #6 0x0000000008339afe in google::LogMessageFatal::~LogMessageFatal() ()
      #7 0x0000000003215662 in impala::PrintPath (tbl_desc=..., path=...) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/util/debug-util.cc:259
      #8 0x000000000370dfe9 in impala::HdfsOrcScanner::ResolveColumns (this=0x14555c00, tuple_desc=..., selected_nodes=0x7f79722730a8, pos_slots=0x7f7972273058) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-orc-scanner.cc:436
      #9 0x00000000037099dd in impala::HdfsOrcScanner::SelectColumns (this=0x14555c00, tuple_desc=...) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-orc-scanner.cc:456
      #10 0x0000000003707688 in impala::HdfsOrcScanner::Open (this=0x14555c00, context=0x7f7972274700) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-orc-scanner.cc:221
      #11 0x00000000035e0a48 in impala::HdfsScanNodeBase::CreateAndOpenScannerHelper (this=0x1b1c7100, partition=0x142f9d00, context=0x7f7972274700, scanner=0x7f79722746f8) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-scan-node-base.cc:882
      #12 0x00000000039df2e8 in impala::HdfsScanNode::ProcessSplit (this=0x1b1c7100, filter_ctxs=..., expr_results_pool=0x7f7972274bd8, scan_range=0x12a16c40, scanner_thread_reservation=0x7f7972274e18) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-scan-node.cc:480
      #13 0x00000000039ddd85 in impala::HdfsScanNode::ScannerThread (this=0x1b1c7100, first_thread=true, scanner_thread_reservation=8192) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-scan-node.cc:418
      #14 0x00000000039e1980 in impala::HdfsScanNode::ThreadTokenAvailableCb(impala::ThreadResourcePool*)::$_0::operator()() const (this=0x7f7972275450) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/exec/hdfs-scan-node.cc:339
      #15 0x00000000039e13b2 in boost::detail::function::void_function_obj_invoker0<impala::HdfsScanNode::ThreadTokenAvailableCb(impala::ThreadResourcePool*)::$_0, void>::invoke(boost::detail::function::function_buffer&) (function_obj_ptr=...) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/boost-1.61.0-p2/include/boost/function/function_template.hpp:159
      #16 0x00000000024d46f0 in boost::function0<void>::operator() (this=0x7f7972275448) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/boost-1.61.0-p2/include/boost/function/function_template.hpp:770
      #17 0x0000000003425ba7 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>*) (name=..., category=..., functor=..., parent_thread_info=0x7f797006d068, thread_started=0x7f797006a5e0) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/repos/Impala/be/src/util/thread.cc:360
      #18 0x0000000003438b87 in boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo*>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>> >::operator()<void (std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const, impala::Promise<long, (impala::PromiseMode)0>), boost::_bi::list0>(boost::_bi::type<void>, void (&)(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>), boost::_bi::list0&, int) (this=0x149c0fc0, f=@0x149c0fb8: 0x3425650 <impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const, impala::Promise<long, (impala::PromiseMode)0>*)>, a=...) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/boost-1.61.0-p2/include/boost/bind/bind.hpp:531
      #19 0x00000000034387a7 in boost::_bi::bind_t<void, void (std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>), boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > >::operator()() (this=0x149c0fb8) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/boost-1.61.0-p2/include/boost/bind/bind.hpp:1222
      #20 0x0000000003437f85 in boost::detail::thread_data<boost::_bi::bind_t<void, void (std::string const&, std::string const&, boost::function<void ()>, impala::ThreadDebugInfo const*, impala::Promise<long, (impala::PromiseMode)0>), boost::_bi::list5<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::ThreadDebugInfo>, boost::_bi::value<impala::Promise<long, (impala::PromiseMode)0>*> > > >::run() (this=0x149c0e00) at /data/jenkins/workspace/impala-cdpd-master-core-ubsan/Impala-Toolchain/boost-1.61.0-p2/include/boost/thread/detail/thread.hpp:116
      #21 0x00000000072080fa in thread_proxy ()
      #22 0x00007f7a4b4e2e25 in start_thread () from /lib64/libpthread.so.0
      #23 0x00007f7a4824834d in clone () from /lib64/libc.so.6

      Attachments

        1. 092420_backtraces.txt
          8 kB
          David Rorke
        2. backtraces.txt
          12 kB
          Wenzhe Zhou
        3. backtraces.txt
          6 kB
          Wenzhe Zhou

        Activity

          People

            csringhofer Csaba Ringhofer
            wzhou Wenzhe Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: