IMPALA-9918: ORC scanner hits DCHECK when GLOG_v=3

PrintPath assumed that all elements in the path are complex,
and hit a DCHECK if it contained a scalar element. This didn't
seem to cause problems in Parquet, but the ORC scanner called
this function with paths where the last element was scalar.
This problem was probably not discovered because no one tested
ORC scanning with v=3 logging + DEBUG builds.

Also added logging to the events when log levels are changed
through the webpage. In case of ResetJavaLogLevelCallback
there was already log line from GlogAppender.java.

Note that the cause of the original issue is still unknown,
as it occurred during custom cluster tests where no other tests
should change the log levels in parallel.

Testing:
- tested the log changes manually

Change-Id: I94e12d2a62ccab5eb5d21675d5f0138f04e622ac
Reviewed-on: http://gerrit.cloudera.org:8080/16611
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>